[CW26]
* SyncProxyTester: Show request, add empty SoftButtons array in the request
+ SYNC Mobile SDK: SyncMsgVersion update
* SyncProxyTester: Incorrect parsing integer value in structure of request in .xml tests

[CW25]
* SYNC Mobile SDK: Object reference leaks when restart SYNC Mobile SDK

[CW24]
+ SyncProxyTester | SyncProxyAndroid SDK: Log messages formed in SDK
* SyncProxyTester: Restore connection during autotest
* SyncProxyTester: 2nd session is not registered if during BT scan both session already started

[CW23]
* SyncProxyAndroid SDK: Heartbeat timeout after EndService
* SyncProxyTester: Data in RegisterAppInterface request, which SPT sends, do not match to data in autotest

[CW21]
* SyncProxyTester | SyncProxyAndroid SDK: Restore Services in case of multi-session connection
+ SyncProxyTester | SyncProxyAndroid SDK: Hide SessionId inside mobile SyncSDK, AppId - is a key for the each application
+ SyncProxyAndroid SDK: start/stop service are sync now
+ SyncProxyTester | SyncProxyAndroid SDK: Multiple Sessions support, general look and feel update

[CW19]
* SyncProxyAndroid SDK: End of Stream reached after connection to SDL established
+ SyncProxyAndroid SDK: Prioritize / paralleling message queues

[CW18]
+ SyncProxyAndroid SDK: added heartbeat handling from SDL side

[CW16]
* SyncProxyTester: Crashes when executing RegisterAppInterface auto-tests with wrong type of parameters
+ SyncProxyTester: Use 'test_data' folder of mobile device to storing and reading PTU / PTS
* SyncProxyAndroid SDK: Audio and video streaming doesn't work if mobile App use protocol v2
+ SyncProxyTester: Do not auto-scroll logs when user scrolling log view

[CW15]
* SyncProxyAndroid SDK: OnSystemRequest processing logic change
* SyncProxyTester: Restore connection from 'Proxy Start' command
* SyncProxyTester | SyncProxyAndroid SDK: OnSystemRequest and every PutFileResponse log into SPT
* SyncProxyAndroid SDK: Eliminate defects with HM timeout