@@ -127,7 +127,12 @@ public class SendProtocolMessageProcessor {
                             sessionID, data.length, messageId, protocolVersionToSend);
 
             if (serviceType == ServiceType.Audio_Service) {
-                //Logger.d(LOG_TAG + " AUDIO");
+                if (audioExecutor.isTerminated()) {
+                    return;
+                }
+                if (audioExecutor.isShutdown()) {
+                    return;
+                }
                 audioExecutor.submit(new Runnable() {
 
                                          @Override
@@ -140,7 +145,12 @@ public class SendProtocolMessageProcessor {
                                      }
                 );
             } else if (serviceType == ServiceType.Mobile_Nav) {
-                //Logger.d(LOG_TAG + " MOBILE_NAVI");
+                if (mobileNaviExecutor.isTerminated()) {
+                    return;
+                }
+                if (mobileNaviExecutor.isShutdown()) {
+                    return;
+                }
                 mobileNaviExecutor.submit(new Runnable() {
 
                                               @Override
@@ -319,6 +329,24 @@ public class SendProtocolMessageProcessor {
     }
 
     /**
+     * Shut down audio executor
+     * @throws InterruptedException
+     */
+    public void shutdownAudioExecutors() throws InterruptedException {
+        audioExecutor.shutdownNow();
+        audioExecutor.awaitTermination(1, TimeUnit.SECONDS);
+    }
+
+    /**
+     * Shut down Navi executor
+     * @throws InterruptedException
+     */
+    public void shutdownNaviExecutors() throws InterruptedException {
+        mobileNaviExecutor.shutdownNow();
+        mobileNaviExecutor.awaitTermination(1, TimeUnit.SECONDS);
+    }
+
+    /**
      * Shut down all executors
      *
      * @throws InterruptedException
@@ -326,18 +354,15 @@ public class SendProtocolMessageProcessor {
     public void shutdownAllExecutors() throws InterruptedException {
         // This will make the executor accept no new threads
         // and finish all existing threads in the queue
+
+        shutdownAudioExecutors();
+
+        shutdownNaviExecutors();
+
         bulkDataDataExecutor.shutdown();
-        //heartbeatExecutor.shutdown();
-        //heartbeatAckExecutor.shutdown();
-        audioExecutor.shutdown();
-        mobileNaviExecutor.shutdown();
         singleMessageExecutor.shutdown();
         // Wait until all threads are finish
         bulkDataDataExecutor.awaitTermination(1, TimeUnit.SECONDS);
-        //heartbeatExecutor.awaitTermination(1, TimeUnit.SECONDS);
-        //heartbeatAckExecutor.awaitTermination(1, TimeUnit.SECONDS);
-        audioExecutor.awaitTermination(1, TimeUnit.SECONDS);
-        mobileNaviExecutor.awaitTermination(1, TimeUnit.SECONDS);
         singleMessageExecutor.awaitTermination(1, TimeUnit.SECONDS);
     }
 }
