@@ -1,14 +1,19 @@
 package com.ford.syncV4.streaming;
 
+import com.ford.syncV4.protocol.ProtocolMessage;
 import com.ford.syncV4.protocol.enums.ServiceType;
 import com.ford.syncV4.session.Session;
+import com.ford.syncV4.util.logger.Logger;
 
 import java.io.IOException;
 import java.io.InputStream;
 
 abstract public class AbstractPacketizer {
 
-    protected IStreamListener mStreamListener = null;
+    @SuppressWarnings("unused")
+    private static final String CLASS_NAME = AbstractPacketizer.class.getSimpleName();
+
+    private IStreamListener mStreamListener = null;
 
     protected byte _rpcSessionID = Session.DEFAULT_SESSION_ID;
 
@@ -39,6 +44,13 @@ abstract public class AbstractPacketizer {
 
     public void removeListener() {
         mStreamListener = null;
+    }
+
+    public void sendMessage(ProtocolMessage protocolMessage) {
+        if (protocolMessage == null) {
+            return;
+        }
+        mStreamListener.sendH264(protocolMessage);
     }
 
     public abstract void start() throws IOException;
