@@ -1,4 +1,5 @@
 [CW26]
+* SYNC Mobile SDK: ProtocolMessageProcessor still send media messages when service is stopped
 * SyncProxyTester: Show request, add empty SoftButtons array in the request
 + SYNC Mobile SDK: SyncMsgVersion update
 * SyncProxyTester: Incorrect parsing integer value in structure of request in .xml tests
